# FluidNC_gCodeSender

./: .gitignore  CMakeLists.txt  CONVERSION_SUMMARY.md  README.md  README_CPP.md  REDESIGNED_ARCHITECTURE.md  RELEASE_NOTES_v0.0.1.md  RULES.md  SETUP_FOR_YOUR_SYSTEM.md  VERSION_0.1.4  WARP.md  build-and-run.bat  e read and ALWAYS adhere to the rules at CUsersuser.ai-rules  main.py  test_editor_config.txt
build-mingw/: CMakeLists.txt  build.bat  increment_build_counter.cmake
core/: __init__.py  fluidnc_client.py  gcode_editor.py  gcode_generator.py  macro_engine.py  state_manager.py  svg_loader.py
docs/: ComprehensiveEditMachineDialog_Implementation_Summary.md  ENHANCED_MACHINE_CONFIGURATION_SYSTEM.md  GCodeParser.md  KINEMATICS_AWARE_HOMING.md  MACHINE_CAPABILITY_DISCOVERY.md  ProjectInfo.json  _config.yml  analytics.json  index.html  track.html  usage.html
gui/: __init__.py  dro_panel.py  gcode_panel.py  jog_panel.py  macro_panel.py  main_frame.py  settings_panel.py  svg_viewer.py  svg_viewer_dummy.py  telnet_setup_panel.py
src/: App.cpp  App.h  app.rc  main.cpp
src/core/: BuildCounter.cpp  BuildCounter.h  CommunicationManager.cpp  CommunicationManager.h  ConnectionManager.cpp  ConnectionManager.h  ErrorHandler.cpp  ErrorHandler.h  FluidNCClient.cpp  FluidNCClient.cpp.tmp  FluidNCClient.h  GCodeEditor.cpp  GCodeEditor.h  GCodeGenerator.cpp  GCodeGenerator.h  GCodeParser.cpp  GCodeParser.h  HomingManager.cpp  HomingManager.h  Logger.cpp  Logger.h  MacVendorLookup.cpp  MacVendorLookup.h  MachineConfigManager.cpp  MachineConfigManager.h  MacroEngine.cpp  MacroEngine.h  NetworkConnection.cpp  NetworkConnection.h  NetworkManager.cpp  NetworkManager.h  NetworkScanner.cpp  NetworkScanner.h  PathUtils.h  SVGLoader.cpp  SVGLoader.h  SimpleLogger.cpp  SimpleLogger.h  StateManager.cpp  StateManager.h  (+6 more)
src/gui/: AboutDialog.cpp  AboutDialog.h  AddMachineDialog.cpp  AddMachineDialog.h  ComprehensiveEditMachineDialog.cpp  ComprehensiveEditMachineDialog.h  ComprehensiveEditMachineDialog_Discovery.cpp  ConsolePanel.cpp  ConsolePanel.h  DROPanel.cpp  DROPanel.h  EnhancedEditMachineDialog.cpp  EnhancedEditMachineDialog.h  EnhancedEditMachineDialog_Part2.cpp  EnhancedEditMachineDialog_Part3.cpp  GCodeEditor.cpp  GCodeEditor.h  GCodePanel.cpp  GCodePanel.h  JogPanel.cpp  JogPanel.h  MachineManagerPanel.cpp  MachineManagerPanel.h  MachineManagerPanel_Data.cpp  MachineManagerPanel_Events.cpp  MachineManagerPanel_Events.cpp.old  MachineManagerPanel_Helpers.cpp  MachineManagerPanel_UI.cpp  MachineVisualizationPanel.cpp  MachineVisualizationPanel.h  MacroConfigDialog.cpp  MacroConfigDialog.h  MacroPanel.cpp  MacroPanel.h  MainFrame.cpp  MainFrame.h  MainFrame_Events.cpp  MainFrame_Layouts.cpp  MainFrame_simple.cpp  NetworkScanDialog.cpp  (+16 more)
